Update index.html for resume

--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
               <span>Hello, I'm Endalkachew Tedla</span> a market research and product management analyst with 2+ years of experience, transitioning to the financial services industry. Completed CareerFoundry Data Analytics bootcamp (2024) and proficient in Excel, SQL, Python, Tableau, GitHub, and Data Ethics. Expert in insights and strategy.
             </p>
 
-            <a href="resume.pdf" class="btn-1 outer-shadow hover-in-shadow" target="next_page">Download Resume</a>
+            <a href="Endalkachew_Tedla_Resume.pdf" class="btn-1 outer-shadow hover-in-shadow" target="next_page">Download Resume</a>
             <a href="#contact" class="link-item btn-1 outer-shadow hover-in-shadow">Hire Me</a>
           </div>
         </div>
