Update index.html download text

--- a/index.html
+++ b/index.html
@@ -511,7 +511,7 @@
                                   <li>
                                     <span>Dataset - <a href="https://images.careerfoundry.com/public/courses/intro-to-data/E1/vgsales.xlsx" download="download">Click To Download</a></span>
                                   </li>
-                                  <li>Downlaod Project - <span><a href="projects/Gameco.zip" target="next_page">Download</a></span></li>
+                                  <li>Download Project - <span><a href="projects/Gameco.zip" target="next_page">Download</a></span></li>
                                 </ul>
                               </div>
                             </div>
@@ -575,7 +575,7 @@
                                   <li>
                                     <span>Tableau Visualization - <a href="projects/Influenza/tableau.html" target="_nextTab">Click To Open</a></span>
                                   </li>
-                                  <li>Downlaod Project - <span><a href="projects/Influenza/whole_project_2.zip" target="next_page">Download</a></span></li>
+                                  <li>Download Project - <span><a href="projects/Influenza/whole_project_2.zip" target="next_page">Download</a></span></li>
                                 </ul>
                               </div>
                             </div>
@@ -630,7 +630,7 @@
                                   <li>
                                     <span>Tableau Visualization - <a href="projects/rockbuster/tableau.html" target="_nextTab">Click To Open</a></span>
                                   </li>
-                                  <li>Downlaod Project - <span><a href="projects/rockbuster/whole project.zip" target="next_page">Download</a></span></li>
+                                  <li>Download Project - <span><a href="projects/rockbuster/whole project.zip" target="next_page">Download</a></span></li>
                                 </ul>
                               </div>
                             </div>
